--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "dependencies": {
-      "express": "^4.17.1",
-      "dotenv": "^10.0.0",
-      "cors": "^2.8.5",
-      "jsonwebtoken": "^8.5.1",
-      "mongoose": "^6.0.14"
+        "bcryptjs": "^3.0.2",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.0.14"
     },
     "devDependencies": {
-      "nodemon": "^2.0.15"
+        "nodemon": "^2.0.15"
     }
-  }
-  
+}
